# chart2csv

./: .gitignore  .gitmodules  README.md  chart2csv.sln
.github/languages/: README_at.md  README_de.md  README_es.md  README_ja.md  README_nl.md  README_ru.md  README_ua.md
.github/workflows/: activation.yml  build-cli.yml  release.yml  unity.yml
FiveNightsAtTorstens/Assets/: credits.txt  output.csv  script-v1.txt
FiveNightsAtTorstens/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
chart2csv/: Chart2Csv.cs  Constants.cs  Pixel.cs  Point.cs  Program.cs  XAxis.cs  YAxis.cs  chart2csv.csproj
chart2csv.Benchmarks/: Program.cs  chart2csv.Benchmarks.csproj
chart2csv.Console/: Program.cs  chart2csv.Console.csproj
chart2csv.Executor/: PointMergeStrategy.cs  SequentialParserExecutor.cs  chart2csv.Executor.csproj
chart2csv.IPC/: Program.cs  chart2csv.IPC.csproj
chart2csv.Parser/: ParserException.cs  ParserState.cs  ParserStep.cs  Pixel.cs  Point.cs  chart2csv.Parser.csproj
chart2csv.Parser/States/: AllDebugImagesState.cs  CSVState.cs  ChartDimensionsState.cs  ChartLayoutImageState.cs  ChartLayoutState.cs  ChartOriginState.cs  ChartWithPointsState.cs  CombinedDebugImageState.cs  InitialState.cs  LineOverlayChartState.cs  MergedChartState.cs  ParsedChartState.cs  PointClusterImageState.cs  XAxisState.cs  YAxisState.cs
chart2csv.Parser/Steps/: AverageMergePointsStep.cs  DetectXAxisStep.cs  DetectYAxisStep.cs  (+11 more)
chart2csv.Test/: Program.cs  chart2csv.Test.csproj
chart2csv.TestData/: chart2csv.TestData.csproj
chart2csv.Utils/: Base64ImageJsonConverter.cs  chart2csv.Utils.csproj
chart2csvConsole/: Program.cs  chart2csvConsole.csproj
chart2gui/: CMakeLists.txt  GameState.cs  MainWindow.cs  Program.Intro1.cs  Program.Intro2.cs  Program.Menu.cs  Program.cs  chart2gui.csproj
chart2gui/og-sfx/: aufloeser.mod  fanfare.mod  gameover.mod  highscore.mod  intro.mod  levelok.mod  lostlive.mod
chart2gui/src/: IPCTester.cpp  IPCTester.h  ProcessControlWindow.cpp  ProcessControlWindow.h  main.cpp
diagrams/: ParserStates-simple.puml  ParserStates.puml
(+63 files in other folders)
